--- a/app/views/home/first.html.erb
+++ b/app/views/home/first.html.erb
@@ -1,8 +1,8 @@
-<nav class="navbar navbar-light" style="background-color: #e3f2fd;">
-  <p>Amolang</p>
-</nav>
-  <div class="cover">
-  </div>
+<div class="cover">
+  <div class="cover_title">함께 떠나는 작은 여행, 아몰랑</div>
+  <br>
+  <a class="btn btn-outline-warning" href="#sec_cover" role="button" style="background-color: #FFFFFF; box-shadow: 0 2px 8px #999;"><div class="to_big">여행 떠나기</div></a>
+</div>
 
 
 <!--첫번째 페이지입니다!
@@ -11,16 +11,16 @@
 2번 페이지는 관심사 입력값 받고 버튼 눌러서 두번째 페이지로 넘어가는 걸로 할게요-->
 
 <!--<img src="/1.jpg"></img>-->
-<div class="sec_cover">
-  <strong>아몰랑</strong>
-  <h5>누군지 모르지만, 나와 잘 맞을 사람과 떠나는 <mark>공통 관심사 여행</mark></h5>
+<div id="sec_cover">
+  <div class="to_give_padding">아몰랑</div>
+    <h5>누군지 모르지만, 나와 잘 맞을 사람과 떠나는 <mark>공통 관심사 여행</mark></h5>
   <hr> <br>
     <form action = "/home/two" method = "post">
       <h5><strong>이름</strong></h5>
-        <input type = "text" name = "name">
+        <input type = "text" name = "name" required>
     <br><br>
         <h5><strong>나이</strong></h5>
-        <input type = "text" name = "age">
+        <input type = "text" name = "age" required>
     <br><br>
     <h5><strong>성별</strong></h5>
         <label for="male">남성</label>
@@ -33,20 +33,20 @@
           거주지역
         </button>
           <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <input type="checkbox"  name="locations" value = "Seoul">서울</a> <br>
-            <input type="checkbox"  name="locations" value = "Busan">부산</a> <br>
-            <input type="checkbox"  name="locations" value = "Daegu">대구</a> <br>
-            <input type="checkbox"  name="locations" value = "Daejeon">대전</a> <br>
-            <input type="checkbox"  name="locations" value = "Ulsan">울산</a> <br>
-            <input type="checkbox"  name="locations"  value = "Gyeonggi">경기</a> <br>
-            <input type="checkbox"  name="locations"  value = "Gangwon">강원</a> <br>
-            <input type="checkbox"  name="locations"  value = "North_Chungcheong">충청북도</a> <br>
-            <input type="checkbox"  name="locations"  value = "South_Chungcheong">충청남도</a> <br>
-            <input type="checkbox"  name="locations" value = "North_Jeolla">전라북도</a> <br>
-            <input type="checkbox"  name="locations" value = "South_Jeolla">전라남도</a> <br>
-            <input type="checkbox"  name="locations" value = "North_Gyeongsang">경상북도</a> <br>
-            <input type="checkbox"  name="locations"  value = "South_Gyeongsang">경상남도</a> <br>
-            <input type="checkbox"  name="locations"  value = "Jeju">제주</a>
+            <input type="radio"  name="locations" value = "Seoul" >서울</a> <br>
+            <input type="radio"  name="locations" value = "Busan">부산</a> <br>
+            <input type="radio"  name="locations" value = "Daegu">대구</a> <br>
+            <input type="radio"  name="locations" value = "Daejeon">대전</a> <br>
+            <input type="radio"  name="locations" value = "Ulsan">울산</a> <br>
+            <input type="radio"  name="locations"  value = "Gyeonggi">경기</a> <br>
+            <input type="radio"  name="locations"  value = "Gangwon">강원</a> <br>
+            <input type="radio"  name="locations"  value = "North_Chungcheong">충청북도</a> <br>
+            <input type="radio"  name="locations"  value = "South_Chungcheong">충청남도</a> <br>
+            <input type="radio"  name="locations" value = "North_Jeolla">전라북도</a> <br>
+            <input type="radio"  name="locations" value = "South_Jeolla">전라남도</a> <br>
+            <input type="radio"  name="locations" value = "North_Gyeongsang">경상북도</a> <br>
+            <input type="radio"  name="locations"  value = "South_Gyeongsang">경상남도</a> <br>
+            <input type="radio"  name="locations"  value = "Jeju">제주</a>
           </div>
         </div>
       <br><br>
@@ -55,8 +55,12 @@
       <!--<input type = "text" name = "location">-->
       <!--<br><br>-->
       <h5><strong>직장 / 학교</strong></h5>
-      <input type = "text" name = "workplace">
+      <input type = "text" name = "workplace" required>
     <br><br>
+    
+        <h5><strong>전화번호</strong></h5>
+        <input type = "text" name = "phone">
+        <br><br>
     <h5><strong>관심사</strong></h5>
     
         <div class="dropdown">
@@ -64,10 +68,10 @@
             영화
           </button>
           <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <input type="checkbox"  name="movie" value = "loco">로코</a> <br>
-            <input type="checkbox"  name="movie" value = "thriller">스릴러</a> <br>
-            <input type="checkbox"  name="movie" value = "SF">S.F</a> <br>
-            <input type="checkbox"  name="movie"  value = "comedy">코미디</a> <br>
+            <input type="radio"  name="movie" value = "loco">로코</a> <br>
+            <input type="radio"  name="movie" value = "thriller">스릴러</a> <br>
+            <input type="radio"  name="movie" value = "SF">S.F</a> <br>
+            <input type="radio"  name="movie"  value = "comedy">코미디</a> <br>
           </div>
         </div>
         <div class="dropdown">
@@ -76,11 +80,11 @@
           </button>
           
           <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <input type="checkbox"  name="sports" value = "running">러닝</a> <br>
-            <input type="checkbox"  name="sports" value = "baseBall">야구</a> <br>
-            <input type="checkbox"  name="sports" value = "soccer">축구</a> <br>
-            <input type="checkbox"  name="sports" value = "skate">스케이팅</a> <br>
-            <input type="checkbox" name="sports" value = "swimming">수영</a> <br>
+            <input type="radio"  name="sports" value = "running">러닝</a> <br>
+            <input type="radio"  name="sports" value = "baseBall">야구</a> <br>
+            <input type="radio"  name="sports" value = "soccer">축구</a> <br>
+            <input type="radio"  name="sports" value = "skate">스케이팅</a> <br>
+            <input type="radio" name="sports" value = "swimming">수영</a> <br>
           </div>
         </div>
         <div class="dropdown">
@@ -88,23 +92,23 @@
           음악
           </button>
         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-          <input type="checkbox" name="music" value = "kpop">K-POP</a> <br>
-          <input type="checkbox" name="music" value = "hiphop">힙합</a> <br>
-          <input type="checkbox"  name="music" value = "jazz">재즈</a> <br>
-          <input type="checkbox"  name="music" value = "classic">클래식</a> <br>
-          <input type="checkbox"  name="music" value = "ballade">발라드</a> <br>
+          <input type="radio" name="music" value = "kpop">K-POP</a> <br>
+          <input type="radio" name="music" value = "hiphop">힙합</a> <br>
+          <input type="radio"  name="music" value = "jazz">재즈</a> <br>
+          <input type="radio"  name="music" value = "classic">클래식</a> <br>
+          <input type="radio"  name="music" value = "ballade">발라드</a> <br>
         </div>
         </div>
         <div class="dropdown">
           <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" name = "route4" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            관심있는 여행지
+            미술
           </button>
           <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <input type="checkbox"  name="travelwhere" value="korea">국내</a> <br>
-            <input type="checkbox"  name="travelwhere" value="europe">유럽</a> <br>
-            <input type="checkbox"  name="travelwhere" value="africa">아프리카</a> <br>
-            <input type="checkbox"  name="travelwhere" value="namerica">북미</a> <br>
-            <input type="checkbox"  name="travelwhere" value="samerica">남미</a> <br>
+            <input type="radio"  name="art" value="piece">조각</a> <br>
+            <input type="radio"  name="art" value="craft">공예</a> <br>
+            <input type="radio"  name="art" value="painting">회화</a> <br>
+            <input type="radio"  name="art" value="design">디자인</a> <br>
+            <input type="radio"  name="art" value="photography">사진</a> <br>
           </div>
         </div>
         <div class="dropdown">
@@ -112,22 +116,17 @@
             선호하는 여행 스타일
           </button>
           <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <input type="checkbox"  name="travelhow" value="walk">뚜벅이</a> <br>
-            <input type="checkbox"  name="travelhow" value="notwalk">최대한 안걷기!</a> <br>
-            <input type="checkbox"  name="travelhow" value="see">관광지 위주</a> <br>
-            <input type="checkbox"  name="travelhow" value="eat">먹거리 위주</a> <br>
+            <input type="radio"  name="travelhow" value="walk">뚜벅이</a> <br>
+            <input type="radio"  name="travelhow" value="notwalk">최대한 안걷기!</a> <br>
+            <input type="radio"  name="travelhow" value="see">관광지 위주</a> <br>
+            <input type="radio"  name="travelhow" value="eat">먹거리 위주</a> <br>
           </div>
         </div>
         <br><br>
-        <h5><strong>전화번호</strong></h5>
-        <input type = "text" name = "phone">
-        <br><br>
-  <button type="submit" class="btn btn-primary">제출</button>
-</form>
-</style>
+        <button type="submit" class="btn btn-outline-warning" style="background-color: #FFFFFF";>제출하기</button>
+  </form>
 </div>
 
 <script>
     $('.dropdown-toggle').dropdown()
-    
 </script>
