--- a/app/views/home/two.html.erb
+++ b/app/views/home/two.html.erb
@@ -19,8 +19,8 @@
     <div class="timeline-image">
     <img src="/2_1.jpg" class="rounded mx-auto d-block" style="width: 200px; height:200px;">
     </div>
-    <%= @print_title[0].loco %>
-    <%= @sport %>
+    <%= @movie_title[0].loco %>
+    <%= @sport_name %>
     
 
     <br>
