--- a/app/views/home/last.html.erb
+++ b/app/views/home/last.html.erb
@@ -1,6 +1,11 @@
-<div class= "text-middle">
-    여행을 마치셨습니다
+<div class= "text-middle" class="to_give_padding">
+<div id="cover_4">
     <br>
-다음에 또 만나요^^
+    <img src="/last.jpg" class="rounded mx-auto d-block" width =" 300px" height = "300px">
+    <br>
+    <h4>여행을 마치셨습니다
+    <br>다음에 또 만나요^^</h4>
 <br>
-<button type="button" class="btn btn-default"><a href ="/home/first">처음으로 돌아가기</a></button></div>
+<br>
+<a class="btn btn-outline-warning" href="/home/first" role="button" style="background-color: #FFFFFF; box-shadow: 0 2px 8px #999;"><div class="to_big">처음으로 돌아가기</div></a>
+</div>
