--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,8 @@
   <link rel="javascript" href="agency.js">
   
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9" crossorigin="anonymous">
+
   <script>
 $(document).ready(function(){
   // Add smooth scrolling to all links
@@ -47,12 +49,6 @@ $(document).ready(function(){
   });
 });
 </script>
- <style>
-body, html {
-    height: 100%;
-}
-</style>
-  
   
 </head>
 <body>
@@ -68,7 +64,7 @@ body, html {
           <a class="nav-link" href="#sec_cover">입력</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/epilogue">후기</a>
+          <a class="nav-link" href="/home/four">후기</a>
         </li>
       </ul>
     </div>
