--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -41,7 +41,7 @@ nav {
 .to_give_padding {
     font-family: 'SangSangShinb7';
     font-size: 80px;
-    padding-top: 20px;
+    padding-top: 10px;
     
 }
 
@@ -55,7 +55,7 @@ nav {
 #third_cover {
     background-color: #f0f8ff;
     text-align: center;
-    height: 1000px;
+    height: 100%;
     box-shadow: 0 2px 8px #999;
 }
 
@@ -76,8 +76,23 @@ nav {
     background-size: 100% 100%;
     background-image: url(/1.jpg);
     box-shadow: 0 2px 8px #999;
-    
 }
+
+.page_four_cover {
+    box-sizing: border-box;
+    top: 0;
+    height: 300px;
+    width: 100%;
+    position: relative;
+    bottom: 100px;
+    text-align: center;
+    z-index: 100;
+    margin-bottom: 50px;
+    background-size: 100%;
+    background-image: url(/travel_four.jpg);
+    box-shadow: 0 2px 8px #999;
+}
+
 
 .cover_title {
     padding-top: 20%;
@@ -102,6 +117,19 @@ h1 {
 }
 
 .text-middle{
+    padding-top: 10%;
+    text-align: center;
+}
+
+.divider{
+    position:absolute;
+    left:50%;
+    top:10%;
+    bottom:10%;
+    border-left:1px solid white;
+}
+
+.btn-group{
     padding-top: 10%;
     text-align: center;
 }
