--- a/app/views/home/first.html.erb
+++ b/app/views/home/first.html.erb
@@ -17,10 +17,10 @@
   <hr> <br>
     <form action = "/home/two" method = "post">
       <h5><strong>이름</strong></h5>
-        <input type = "text" name = "name" required>
+        <input type = "text" name = "name" class="rounded mx-auto d-block" required>
     <br><br>
         <h5><strong>나이</strong></h5>
-        <input type = "text" name = "age" required>
+        <input type = "text" name = "age"  class="rounded mx-auto d-block" required>
     <br><br>
     <h5><strong>성별</strong></h5>
         <label for="male">남성</label>
@@ -33,19 +33,19 @@
           거주지역
         </button>
           <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <input type="radio"  name="locations" value = "Seoul" >서울</a> <br>
-            <input type="radio"  name="locations" value = "Busan">부산</a> <br>
-            <input type="radio"  name="locations" value = "Daegu">대구</a> <br>
-            <input type="radio"  name="locations" value = "Daejeon">대전</a> <br>
-            <input type="radio"  name="locations" value = "Ulsan">울산</a> <br>
-            <input type="radio"  name="locations"  value = "Gyeonggi">경기</a> <br>
-            <input type="radio"  name="locations"  value = "Gangwon">강원</a> <br>
-            <input type="radio"  name="locations"  value = "North_Chungcheong">충청북도</a> <br>
-            <input type="radio"  name="locations"  value = "South_Chungcheong">충청남도</a> <br>
-            <input type="radio"  name="locations" value = "North_Jeolla">전라북도</a> <br>
-            <input type="radio"  name="locations" value = "South_Jeolla">전라남도</a> <br>
-            <input type="radio"  name="locations" value = "North_Gyeongsang">경상북도</a> <br>
-            <input type="radio"  name="locations"  value = "South_Gyeongsang">경상남도</a> <br>
+            <input type="radio"  name="locations" value = "Seoul" >서울 <br>
+            <input type="radio"  name="locations" value = "Busan">부산 <br>
+            <input type="radio"  name="locations" value = "Daegu">대구 <br>
+            <input type="radio"  name="locations" value = "Daejeon">대전 <br>
+            <input type="radio"  name="locations" value = "Ulsan">울산 <br>
+            <input type="radio"  name="locations"  value = "Gyeonggi">경기 <br>
+            <input type="radio"  name="locations"  value = "Gangwon">강원 <br>
+            <input type="radio"  name="locations"  value = "North_Chungcheong">충청북도 <br>
+            <input type="radio"  name="locations"  value = "South_Chungcheong">충청남도 <br>
+            <input type="radio"  name="locations" value = "North_Jeolla">전라북도 <br>
+            <input type="radio"  name="locations" value = "South_Jeolla">전라남도 <br>
+            <input type="radio"  name="locations" value = "North_Gyeongsang">경상북도 <br>
+            <input type="radio"  name="locations"  value = "South_Gyeongsang">경상남도 <br>
             <input type="radio"  name="locations"  value = "Jeju">제주</a>
           </div>
         </div>
@@ -55,11 +55,11 @@
       <!--<input type = "text" name = "location">-->
       <!--<br><br>-->
       <h5><strong>직장 / 학교</strong></h5>
-      <input type = "text" name = "workplace" required>
+      <input type = "text" name = "workplace"  class="rounded mx-auto d-block" required>
     <br><br>
     
         <h5><strong>전화번호</strong></h5>
-        <input type = "text" name = "phone">
+        <input type = "text" name = "phone" class="rounded mx-auto d-block">
         <br><br>
     <h5><strong>관심사</strong></h5>
     
@@ -68,10 +68,10 @@
             영화
           </button>
           <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <input type="radio"  name="movie" value = "loco">로코</a> <br>
-            <input type="radio"  name="movie" value = "thriller">스릴러</a> <br>
-            <input type="radio"  name="movie" value = "SF">S.F</a> <br>
-            <input type="radio"  name="movie"  value = "comedy">코미디</a> <br>
+            <input type="radio"  name="movie" value = "loco">로코 <br>
+            <input type="radio"  name="movie" value = "thriller">스릴러 <br>
+            <input type="radio"  name="movie" value = "SF">S.F <br>
+            <input type="radio"  name="movie"  value = "comedy">코미디 <br>
           </div>
         </div>
         <div class="dropdown">
@@ -80,11 +80,11 @@
           </button>
           
           <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <input type="radio"  name="sports" value = "running">러닝</a> <br>
-            <input type="radio"  name="sports" value = "baseBall">야구</a> <br>
-            <input type="radio"  name="sports" value = "soccer">축구</a> <br>
-            <input type="radio"  name="sports" value = "skate">스케이팅</a> <br>
-            <input type="radio" name="sports" value = "swimming">수영</a> <br>
+            <input type="radio"  name="sports" value = "running">러닝 <br>
+            <input type="radio"  name="sports" value = "baseBall">야구 <br>
+            <input type="radio"  name="sports" value = "soccer">축구 <br>
+            <input type="radio"  name="sports" value = "skate">스케이팅 <br>
+            <input type="radio" name="sports" value = "swimming">수영 <br>
           </div>
         </div>
         <div class="dropdown">
@@ -92,11 +92,11 @@
           음악
           </button>
         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-          <input type="radio" name="music" value = "kpop">K-POP</a> <br>
-          <input type="radio" name="music" value = "hiphop">힙합</a> <br>
-          <input type="radio"  name="music" value = "jazz">재즈</a> <br>
-          <input type="radio"  name="music" value = "classic">클래식</a> <br>
-          <input type="radio"  name="music" value = "ballade">발라드</a> <br>
+          <input type="radio" name="music" value = "kpop">K-POP <br>
+          <input type="radio" name="music" value = "hiphop">힙합 <br>
+          <input type="radio"  name="music" value = "jazz">재즈 <br>
+          <input type="radio"  name="music" value = "classic">클래식 <br>
+          <input type="radio"  name="music" value = "ballade">발라드 <br>
         </div>
         </div>
         <div class="dropdown">
@@ -104,11 +104,11 @@
             미술
           </button>
           <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <input type="radio"  name="art" value="piece">조각</a> <br>
-            <input type="radio"  name="art" value="craft">공예</a> <br>
-            <input type="radio"  name="art" value="painting">회화</a> <br>
-            <input type="radio"  name="art" value="design">디자인</a> <br>
-            <input type="radio"  name="art" value="photography">사진</a> <br>
+            <input type="radio"  name="art" value="piece">조각 <br>
+            <input type="radio"  name="art" value="craft">공예 <br>
+            <input type="radio"  name="art" value="painting">회화 <br>
+            <input type="radio"  name="art" value="design">디자인 <br>
+            <input type="radio"  name="art" value="photography">사진 <br>
           </div>
         </div>
         <div class="dropdown">
@@ -116,10 +116,10 @@
             선호하는 여행 스타일
           </button>
           <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <input type="radio"  name="travelhow" value="walk">뚜벅이</a> <br>
-            <input type="radio"  name="travelhow" value="notwalk">최대한 안걷기!</a> <br>
-            <input type="radio"  name="travelhow" value="see">관광지 위주</a> <br>
-            <input type="radio"  name="travelhow" value="eat">먹거리 위주</a> <br>
+            <input type="radio"  name="travelhow" value="walk">뚜벅이 <br>
+            <input type="radio"  name="travelhow" value="notwalk">최대한 안 걷기! <br>
+            <input type="radio"  name="travelhow" value="see">관광지 위주 <br>
+            <input type="radio"  name="travelhow" value="eat">먹거리 위주 <br>
           </div>
         </div>
         <br><br>
