--- a/app/views/home/first.html.erb
+++ b/app/views/home/first.html.erb
@@ -117,13 +117,13 @@
           </button>
           <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
             <input type="radio"  name="travelhow" value="walk">뚜벅이 <br>
-            <input type="radio"  name="travelhow" value="notwalk">최대한 안 걷기! <br>
+            <input type="radio"  name="travelhow" value="notwalk">최대한 안 걷기 <br>
             <input type="radio"  name="travelhow" value="see">관광지 위주 <br>
             <input type="radio"  name="travelhow" value="eat">먹거리 위주 <br>
           </div>
         </div>
         <br><br>
-        <button type="submit" class="btn btn-outline-warning" style="background-color: #FFFFFF";>제출하기</button>
+        <button type="submit" class="btn btn-outline-warning" style="background-color: #FFFFFF;">제출하기</button> <br><br>
   </form>
 </div>
 
