--- a/app/views/home/four.html.erb
+++ b/app/views/home/four.html.erb
@@ -1,17 +1,19 @@
 <div id="cover_4">
-        <div class="page_four_cover"></div>
+        <a href="#lv-container"><div class="page_four_cover"></div></a>
             <form>
+                <i class="fas fa-edit fa-8x"></i><br><br>
+                <h4>메이트는 괜찮았나요? </h4><hr><br>
                 <p>
-                    메이트와는 괜찮았나요?<br><br>
-        
-                    메이트 이름: <input type="text" name="name" class="rounded mx-auto d-block"><br><br>
+                    메이트 이름: <input type="text" name="name"><br><br>
                     평가: <input type="number" name="rating"  min="1" max="5">
                 </p>
                 <br>
-                <button type="submit" class="btn btn-green"><a href = "/home/last">제출</a></button>
+                
+                <button type="submit" class="btn btn-outline-warning" style="background-color: #FFFFFF; box-shadow: 0 2px 8px #999;"><a href = "/home/last">제출</a></button>
             </form>
-            <br>
-            <p>당신의 여행은 어땠나요? 즐거웠나요?<br><br>
+            <br><br>
+            <p>누군지 모르는 사람과 떠나는 작은 일탈여행, 아몰랑
+            <br><br>당신의 여행은 어땠나요?<br><br>
                 후기를 작성해주세요^^
             </p>
             <!-- 라이브리 시티 설치 코드 -->
