--- a/app/views/home/three_3.html.erb
+++ b/app/views/home/three_3.html.erb
@@ -4,15 +4,15 @@
 <div id="cover_3-3">
 <br><br>
     잘 보셨나요??<br>
-    <% if @a_genre  == "piece" %>
+    <% if "#{@a_genre}"  == "piece" %>
         조각품들은 정말 다 예술이에요
-    <% elsif @a_genre   == "craft" %>
+    <% elsif "#{@a_genre}"   == "craft" %>
         아기자기해서 귀여웠죠?
-    <% elsif @a_genre   == "painting" %>
+    <% elsif "#{@a_genre}"   == "painting" %>
         눈이 정화되었어요
-    <% elsif @a_genre   == "design" %>
+    <% elsif "#{@a_genre}"   == "design" %>
         참 재치있는 디자인들이었어요!
-    <% elsif @a_genre   == "photography" %>
+    <% elsif "#{@a_genre}"   == "photography" %>
         사진 잘 찍고 싶어졌죠?
     <%end%>
 
